feature: ventana de conexión para los jugadores